[tool.poetry]
name = "petals"
version = "0.1.0"
description = "Beautiful TUI components written on top of Textual"
authors = ["Shashank Tomar <shashank004@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
rich = "^13.3.5"
textual = "^0.22.3"


[tool.poetry.group.dev.dependencies]
textual = {extras = ["dev"], version = "^0.22.3"}
ruff = "^0.0.264"
black = "^23.3.0"
mypy = "^1.2.0"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Never enforce `E501` (line length violations).
ignore = ["E741"]
select = ["E", "F", "I", "W", "UP"]
line-length = 120

[tool.black]
line-length = 120
